Took way too long on fixing my html because there was an error. Also tried to fix spacing

--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 *, *::before, *::after {
-box-sizing:border-box;
-font-family:Arial, Helvetica, sans-serif
+box-sizing: border-box;
+font-family: Arial, Helvetica, sans-serif
 }
 
 :root {
@@ -66,4 +66,20 @@ border-color: black;
 
 .btn.wrong {
     --hue: var(--hue-wrong);
+}
+
+.start-btn, .next-btn {
+    font-size: 1.5rem;
+    font-weight: bold;
+    padding: 10px 20px;
+}
+
+.controls {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.hide {
+    display: none;
 }
